[gd_scene load_steps=3 format=3 uid="uid://ca5b22w8po58j"]

[ext_resource type="Script" uid="uid://c6uafcok74h3g" path="res://Battlefield/GUI/difficulty_popup.gd" id="1_c7ohr"]
[ext_resource type="Script" uid="uid://hflmog8s660p" path="res://color_tinter.gd" id="2_u66nl"]

[node name="DifficultyPopup" type="Control"]
z_index = 300
layout_mode = 3
anchors_preset = 0
offset_right = 70.0
offset_bottom = 9.0
script = ExtResource("1_c7ohr")

[node name="ToggleButton" type="Button" parent="."]
layout_mode = 0
offset_top = 2.0
offset_right = 32.0
offset_bottom = 10.0

[node name="ColorRect" type="ColorRect" parent="ToggleButton"]
visible = false
z_index = -1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("2_u66nl")
brightness_shift = 0.65
is_button_shadow = true

[node name="PopupPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_top = 9.0
offset_right = 80.0
offset_bottom = 80.0

[node name="StackVBox" type="VBoxContainer" parent="PopupPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="StackList" type="VBoxContainer" parent="PopupPanel/StackVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="MoneyLabel" type="Label" parent="PopupPanel/StackVBox"]
layout_mode = 2
